# opt-methods

./: .gitignore  .~lock.Shablon_lr_4.docx#  README.md  ПМ01 Тест учет ОС 23.03.2020.docx
labs/minimization/: Cargo.toml  README.md
labs/minimization/report/: main.typ
labs/minimization/src/: main.rs
labs/utils/src/: lib.rs
matrix-game-4/: CHANGELOG.md  LICENSE  matrix-game4.cabal
matrix-game-4/exe/: Main.hs
matrix-game-4/lib/: MatrixGame.hs
matrix-game-4/report/: Москера_лр4.typ
minimization/: .gitignore  README.md
minimization-2/: CHANGELOG.md  LICENSE  minimization2.cabal  output.txt
minimization-2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
minimization-2/dist-newstyle/packagedb/ghc-9.4.7/: minimization2-0.1.0.0-inplace.conf  package.cache
minimization-2/exe/: Main.hs
minimization-2/lib/: Function.hs  Minimization.hs  Utils.hs
minimization-2/report/: .~lock.шаблон_лр_2.docx#  main.typ  Москера_лр2.typ  шаблон_лр_2.docx
minimization/report/: main.typ
minimization/src/: main.rs
optimization-3/: CHANGELOG.md  optimization3.cabal
optimization-3/exe/: Main.hs
optimization-3/report/: Москера_лр3.typ
optimization-3/src/: Formst.hs
optimization-3/src/Optimization/: DirectTask.hs  DualTask.hs
utils/: Cargo.toml
utils/src/: lib.rs
